$Id$

	WARNING, users of Sparc and HP-PA systems should be carefull, some
	menus do not work.
	All other users on Intel machines (99,9% I think) can use this version.


v0.37.5		12-Jul-2003


v0.37.4		10-May-2003 - 12-Jul-2003

	upgrade:
		Check setting of menu 1.14.15

	general:
		Added check for inconv.h in configure script for UNIX98 
		character set conversion.

	common.a:
		The getheader function changed to support stone-age .pkt's.
		If the packet year has a Y2K bug, the year is fixed. This is
		only cosmetic for logging.
		If the zone info is missing, the zone is guessed from 2d aka
		matching against the system aka's. Then all mail in the .pkt
		file is also assumed to be in that zone if there is no zone
		info in the messages also.
		Guess what, these packets do still exist in Fidonet, it took
		5 years to find them! If you want to check, call 5:5/0
		Fixed compiler warning in network code.
		printable function now escapes all non-printable characters.
		In rfcmsg function the Cc: header is now treated as any other
		header to prevent a SIGSEGV when the headerline is empty.

	mbcico:
		The binkp transmitter does now escape the unsafe filename
		characters.
		The binkp receiver now does process escaped filenames.
		The binkp protocol now supports MD5 crypted passwords.

	mbfido:
		Stone age packet support, see common.a.
		Due to a configuration error in some system using King-FIX 
		v.1.26.Universal mbfido did crash.
		Now it will log this and continue processing ticfiles with the
		risk of sending files back to the owner of that faulty program.
		Added the same check for Seenby lines.

	mbtask:
		Fixed compiler warnings in network code.

	mbsebbs:
		Increased internal message buffer size to 700 lines.
		Fullscreen editor code cleanup, debug messages removed.
		When entering a message, the first character of the subject
		line was capitalized.

	mbsetup:
		In menu 1.14 added a switch to turn MD5 crypted passwords off.

	unix:
		Fixed compiler warning.

